--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -31,11 +31,14 @@
         android:layout_marginLeft="@dimen/margin"
         android:layout_marginRight="@dimen/margin"
         android:layout_marginStart="@dimen/margin"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:textColor="@color/color_black"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text=""
-        android:textColor="@color/color_black"
-        android:textSize="@dimen/text_size"/>
+        tools:text="" />
     <TextView
         android:id="@+id/location"
         android:layout_width="wrap_content"
@@ -45,13 +48,30 @@
         android:layout_marginRight="@dimen/margin"
         android:layout_marginStart="@dimen/margin"
         android:layout_marginTop="@dimen/margin"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:autoLink="map"
         android:textColor="@color/color_black"
         android:textSize="@dimen/text_size_2"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name"
-        android:autoLink="map"
         tools:text="" />
+    <ImageView
+        android:id="@+id/phone_icon"
+        android:layout_width="@dimen/layout_phone_image"
+        android:layout_height="@dimen/layout_phone_image"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
+        android:layout_marginStart="@dimen/margin"
+        android:src="@drawable/ic_local_phone_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.256"
+        app:layout_constraintStart_toStartOf="parent" />
     <TextView
         android:id="@+id/phone"
         android:layout_width="wrap_content"
@@ -61,15 +81,14 @@
         android:layout_marginLeft="@dimen/margin"
         android:layout_marginRight="@dimen/margin"
         android:layout_marginStart="@dimen/margin"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/color_black"
+        android:layout_marginTop="@dimen/margin"
+        android:autoLink="phone"
         android:textSize="@dimen/text_size_2"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location"
         app:layout_constraintVertical_bias="0.0"
-        android:autoLink="phone"
         tools:text="" />
 </android.support.constraint.ConstraintLayout>
