--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="list_item_height">88dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="margin">8dp</dimen>
     <dimen name="layout_image">200dp</dimen>
     <dimen name="layout_phone">32dp</dimen>
+    <dimen name="layout_phone_image">20dp</dimen>
     <dimen name="text_size">24sp</dimen>
     <dimen name="text_size_2">16sp</dimen>
     <dimen name="tab_max_width">0dp</dimen>
